--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@ reddit_media/
 # Ignorar o arquivo checked_posts
 checked_posts.txt
 
+# Ignorar o arquivo twitter_posted
+twitter_posted.txt
+
 # Ignorar o pycache
 __pycache__/
